--- a/web/assets/scss/helpers/_mixins.scss
+++ b/web/assets/scss/helpers/_mixins.scss
@@ -77,3 +77,14 @@
     @content;
   }
 }
+
+// Global Padding
+@mixin global-padding {
+  padding: $padding-sm;
+  @include media-md {
+    padding: $padding-md;
+  }
+  @include media-lg {
+    padding: $padding-lg;
+  }
+}
