--- a/web/assets/scss/helpers/_variables.scss
+++ b/web/assets/scss/helpers/_variables.scss
@@ -20,8 +20,15 @@ $gray: #595954;
 // Spacing/sizing
 $beat: 8px;
 $padding: 5*$beat;
+$padding-sm: 4*$beat;
+$padding-md: 5*$beat;
+$padding-lg: 7*$beat;
 $landscape-padding: 66.66%;
 $portrait-padding: 133.33%;
+
+// Header vars
+$header-height-md: 112px;
+$header-height-lg: 168px;
 
 // Animation
 $ease: ease-out;
@@ -32,9 +39,9 @@ $breakpoint-thirds-3col: 900px;
 $breakpoint-quarters-2col: 550px;
 $breakpoint-quarters-4col: 900px;
 $breakpoint-meta: 800px;
-$nav-max-width: 480px;
+$sidebar-max-width: 288px;
 
 $breakpoint-sm: 480px;
 $breakpoint-md: 750px;
 $breakpoint-lg: 1200px;
-$breakpoint-xl: $nav-max-width*3;
+$breakpoint-xl: $sidebar-max-width*3;
