--- a/web/assets/scss/main.scss
+++ b/web/assets/scss/main.scss
@@ -24,6 +24,7 @@
 @import "components/rows";
 @import "components/masonry";
 @import "components/header";
+@import "components/sidebar";
 @import "components/page-headers";
 @import "components/nav";
 @import "components/footer";
