--- a/web/assets/scss/pages/_pages.scss
+++ b/web/assets/scss/pages/_pages.scss
@@ -28,7 +28,7 @@
         min-height: calc( 100vw/3*(2/3) );
       }
       @include media-xl {
-        min-height: calc( (100vw - #{$nav-max-width})/2*(2/3) );
+        min-height: calc( (100vw - #{$sidebar-max-width})/2*(2/3) );
       }
     }
   }
