Adding a project-color class to project modules and adding some styling to the color-schemes loop to account for project-color hover states

--- a/templates/projects/_article.html
+++ b/templates/projects/_article.html
@@ -6,7 +6,7 @@
 
 {% set projectColor = (project.colorSwatch.label ?? null) ? project.colorSwatch.label|lower : 'black' %}
 
-<article class="project module project-module bigclicky">
+<article class="project module project-module bigclicky color-{{ projectColor }}">
   <div class="image-wrap -{{ projectAspectRatio }}">
     {% if projectImage %}
       <div class="project-image lazy image" style="background-image: url('');" data-original="{{ projectImage.getUrl('thumb') }}"></div>
