--- a/web/assets/scss/helpers/_color-scheme.scss
+++ b/web/assets/scss/helpers/_color-scheme.scss
@@ -19,10 +19,15 @@ $colors: (
   .background-#{$color-key} {
     background-color: $color;
   }
-}
 
-@each $color-key, $color in $colors {
   .text-#{$color-key} {
     color: $color;
+  }
+
+  .project-module.color-#{$color-key} {
+    &::before,
+    &::after {
+      background: $color;
+    }
   }
 }
