--- a/web/assets/scss/helpers/_variables.scss
+++ b/web/assets/scss/helpers/_variables.scss
@@ -44,4 +44,4 @@ $sidebar-max-width: 288px;
 $breakpoint-sm: 480px;
 $breakpoint-md: 750px;
 $breakpoint-lg: 1200px;
-$breakpoint-xl: $sidebar-max-width*3;
+$breakpoint-xl: 1440px;
