--- a/web/assets/scss/components/_media-blocks.scss
+++ b/web/assets/scss/components/_media-blocks.scss
@@ -248,6 +248,10 @@
       float: left;
       margin-right: 2*$beat;
       margin-bottom: 2*$beat;
+      &.-right {
+        float: right;
+        margin-right: 0;
+      }
 
       &:last-child {
         margin-right: 0;
