--- a/templates/contact/index.html
+++ b/templates/contact/index.html
@@ -1,5 +1,17 @@
 {% extends (craft.app.request.isAjax and not craft.app.request.isLivePreview) ? "_ajax-layout" : "_layout" %}
 {% set bodyClass = 'white-header' %}
+{% set officeEntries = craft.entries.section('offices').all() %}
+
+{% block filters %}
+  <h2 class="font-nav current"><a href="/contact/">Contact</a></h2>
+  <ul class="filters semantic-only-list">
+    {% for office in officeEntries %}
+      <li class="{{ active(office.url, 'url', 'current') }}">
+        <a href="{{ office.url }}">{{ office.title }}</a>
+      </li>
+    {% endfor %}
+  </ul>
+{% endblock %}
 
 {% block content %}
 
@@ -32,7 +44,7 @@
     </div>
 
     <ul class="row -quarters -separators semantic-only-list">
-      {% for entry in craft.entries.section('offices').all() %}
+      {% for entry in officeEntries %}
         <li class="row-block   separate">
 
           <article class="module contact-module pad vcard image-wrap location-contact">
