--- a/templates/offices/_entry.html
+++ b/templates/offices/_entry.html
@@ -1,5 +1,17 @@
 {% extends (craft.app.request.isAjax and not craft.app.request.isLivePreview) ? "_ajax-layout" : "_layout" %}
 {% set bodyClass = 'overlapping-header' %}
+{% set officeEntries = craft.entries.section('offices').all() %}
+
+{% block filters %}
+  <h2 class="font-nav"><a href="/contact/">Contact</a></h2>
+  <ul class="filters semantic-only-list">
+    {% for office in officeEntries %}
+      <li class="{{ active(office.url, 'url', 'current') }}">
+        <a href="{{ office.url }}">{{ office.title }}</a>
+      </li>
+    {% endfor %}
+  </ul>
+{% endblock %}
 
 {% block content %}
 
