--- a/templates/news/_entry.html
+++ b/templates/news/_entry.html
@@ -4,14 +4,14 @@
 {% set impactPeople = entry.impactPeople.all() %}
 
 {% block filters %}
-  <li class="filters-item">
-    <a href="/impact/">All</a>
-  </li>
-  {% for cat in craft.categories.group('impactTypes').all() %}
-    <li class="filters-item {% if cat.id == impactType.id %}current{% endif %}">
-      <a href="{{ cat.url }}">{{ cat.title }}</a>
-    </li>
-  {% endfor %}
+  <h2 class="font-nav"><a href="/news/">News &<br>Insights</a></h2>
+  <ul class="filters semantic-only-list">
+    {% for cat in craft.categories.group('impactTypes').all() %}
+      <li class="{% if cat.id == impactType.id %}active{% endif %}">
+        <a href="{{ cat.url }}">{{ cat.title }}</a>
+      </li>
+    {% endfor %}
+  </ul>
 {% endblock %}
 
 {% block content %}
