--- a/templates/news/index.html
+++ b/templates/news/index.html
@@ -1,13 +1,13 @@
 {% extends (craft.app.request.isAjax and not craft.app.request.isLivePreview) ? "_ajax-layout" : "_layout" %}
 
 {% set bodyClass = 'overlapping-header' %}
-{% set statType = craft.categories.group('statTypes').slug('impact').one() %}
+{% set statType = craft.categories.group('statTypes').slug('news').one() %}
 {% set stats = [] %}
 
 {% if category is defined %}
 
   {% set title = category.title %}
-  {% set entry = craft.entries.section('impactIndex').one() %}
+  {% set entry = craft.entries.section('newsIndex').one() %}
   {% if craft.app.request.isAjax %}
     {# AJAX call for infinite scroll #}
     {% set omitId = craft.app.request.getQueryParam('omitId') %}
@@ -45,14 +45,14 @@
 {% endif %}
 
 {% block filters %}
-  <li class="filters-item {{ (category is not defined) ? 'current' : '' }}">
-    <a href="/impact/">All</a>
-  </li>
-  {% for cat in craft.categories.group('impactTypes').all() %}
-    <li class="filters-item {{ active(cat.url, 'url', 'current') }}">
-      <a href="{{ cat.url }}">{{ cat.title }}</a>
-    </li>
-  {% endfor %}
+  <h2 class="font-nav {{ (category is not defined) ? 'current' : '' }}"><a href="/news/">News &<br>Insights</a></h2>
+  <ul class="filters semantic-only-list">
+    {% for cat in craft.categories.group('impactTypes').all() %}
+      <li class="{{ active(cat.url, 'url', 'current') }}">
+        <a href="{{ cat.url }}">{{ cat.title }}</a>
+      </li>
+    {% endfor %}
+  </ul>
 {% endblock %}
 
 {% block content %}
@@ -70,7 +70,7 @@
         </div>
         <div class="row -halves">
             <li class="row-block -right background-black text-off-white font-smoothing featured-post-block">
-              {% include 'impact/_article' %}
+              {% include 'news/_article' %}
             </li>
         </div>
       {% endif %}
@@ -86,7 +86,7 @@
         </li>
       {% endif %}
       <li class="row-block separate infinite-scroll-object">
-        {% include 'impact/_article' %}
+        {% include 'news/_article' %}
       </li>
     {% else %}
       {% if not featuredImpact %}
