--- a/templates/partials/_header.html
+++ b/templates/partials/_header.html
@@ -13,10 +13,13 @@
       {% if entry is defined and entry.isEditable() %}
         <li class="secondary-links-item edit-link"><a href="{{ entry.cpEditUrl }}">Edit Entry</a></li>
       {% endif %}
-      <li class="secondary-links-item {{ active('/careers/', 'url', 'current') }}">
-        <a href="/careers/">Careers</a>
+      <li class="{{ active('/about/', 'url', 'current') }}">
+        <a href="/about/">About</a>
       </li>
-      <li class="secondary-links-item {{ active('/contact/', 'url', 'current') }}">
+      <li class="{{ active('/about/careers/', 'url', 'current') }}">
+        <a href="/about/careers/">Careers</a>
+      </li>
+      <li class="{{ active('/contact/', 'url', 'current') }}">
         <a href="/contact/">Contact</a>
       </li>
       <li class="search-open">
@@ -26,13 +29,13 @@
 
     <ul class="primary-links semantic-only-list nav-content">
       {% for navItem in [
-        { slug: 'expertise', urlMatches: 'expertise|projects' },
-        { slug: 'impact', urlMatches: 'impact' },
-        { slug: 'approach', urlMatches: 'approach|services|offices|awards' },
-        { slug: 'people', urlMatches: 'people' },
+        { title: 'Projects', slug: 'projects', urlMatches: 'projects' },
+        { title: 'News & Insights', slug: 'news', urlMatches: 'news' },
+        { title: 'Services', slug: 'services', urlMatches: 'services|offices|awards' },
+        { title: 'People', slug: 'people', urlMatches: 'people' },
       ] %}
         <li class="primary-links-item {{ active(navItem.urlMatches, 1, 'current') }}">
-          <a href="/{{ navItem.slug }}/">{{ navItem.slug|capitalize }}</a>
+          <a href="/{{ navItem.slug }}/">{{ navItem.title }}</a>
         </li>
       {% endfor %}
     </ul>
