update several dividers to darker gray, remove Approach buttons in header template, open icims links in new tab

--- a/templates/partials/_related-impact.html
+++ b/templates/partials/_related-impact.html
@@ -7,10 +7,10 @@
         </div>
       </div>
     </div>
-    <ul class="row -halves -separators semantic-only-list hr-top-off-white hr-bottom-off-white">
+    <ul class="row -halves -separators semantic-only-list hr-top-concrete-light hr-bottom-concrete-light">
       {% for post in relatedPosts %}
         <li class="row-block separate">
-          {% include 'impact/_article' %}
+          {% include 'news/_article' %}
         </li>
       {% endfor %}
     </ul>
