--- a/templates/partials/media-blocks/_link-grid.html
+++ b/templates/partials/media-blocks/_link-grid.html
@@ -1,4 +1,4 @@
-<div class="module link-grid-module hr-top-off-white hr-bottom-off-white">
+<div class="module link-grid-module hr-top-concrete-light hr-bottom-concrete-light">
   <div class="row -thirds -separators">
     {% for row in block.links.all() %}
       {% set relatedEntry = row.relatedEntry.one() %}
