--- a/web/assets/scss/components/_separators.scss
+++ b/web/assets/scss/components/_separators.scss
@@ -52,7 +52,7 @@
       left: $padding;
       right: $padding;
       position: absolute;
-      background: $off-white;
+      background: $concrete-light;
     }
 
     &::before {
@@ -171,7 +171,7 @@
         top: $padding;
         bottom: $padding;
         position: absolute;
-        background: $off-white;
+        background: $concrete-light;
       }
     }
 
@@ -197,7 +197,7 @@
     left: $padding;
     right: $padding;
     position: absolute;
-    background: $off-white;
+    background: $concrete-light;
   }
 
   &::before {
