--- a/web/assets/scss/helpers/_accessibility.scss
+++ b/web/assets/scss/helpers/_accessibility.scss
@@ -18,4 +18,8 @@
   width: 1px !important;
   overflow: hidden;
 }
-body:hover .visually-hidden a, body:hover .visually-hidden input, body:hover .visually-hidden button { display: none !important; }
+body:hover .visually-hidden a,
+body:hover .visually-hidden input,
+body:hover .visually-hidden button {
+  display: none !important;
+}
