--- a/web/assets/scss/components/_page-headers.scss
+++ b/web/assets/scss/components/_page-headers.scss
@@ -2,9 +2,9 @@
   position: relative;
 
   @include media-md {
-    padding-top: 16*$beat;
-    padding-bottom: 16*$beat;
-    min-height: calc((100vw - #{$padding})*.667); // Aspect ratio 3:2
+    // padding-top: 16*$beat;
+    // padding-bottom: 16*$beat;
+    min-height: calc((100vw - #{$padding}) * .667); // Aspect ratio 3:2
   }
 
   @include media-lg {
@@ -12,7 +12,7 @@
   }
 
   @include media-xl {
-    min-height: calc((100vw - #{$sidebar-max-width}) * .667);
+    // min-height: calc((100vw - #{$sidebar-max-width}) * .667);
   }
 
   .row {
