--- a/web/assets/scss/components/_sidebar.scss
+++ b/web/assets/scss/components/_sidebar.scss
@@ -2,14 +2,45 @@
 
 .sidebar {
   @include global-padding;
+  display: none;
+  h2 {
+    position: relative;
+    a {
+      display: block;
+      text-decoration: none;
+    }
+    &.current a,
+    a:hover,
+    a:focus {
+      color: $red;
+    }
+  }
+  .current {
+    // Hover Arrow
+    &::after {
+      right: 0;
+      // opacity: 0;
+      top: 2*$beat;
+      content: '';
+      width: 11.1px;
+      height: 15.7px;
+      position: absolute;
+      background: url('../svgs/icon-right-arrow-red.svg') no-repeat;
+      background-size: contain;
+      @include media-lg {
+        // display: none;
+      }
+    }
+  }
 
   @include media-lg {
+    display: block;
     left: 0;
     bottom: 0;
     position: fixed;
     top: $header-height-lg;
     width: $sidebar-max-width;
-    max-height: calc(100vh - $header-height-lg);
+    max-height: calc(100vh - #{$header-height-lg});
   }
 
   // Filters
@@ -22,7 +53,11 @@
       &:first-of-type {
         margin-top: 0;
       }
+      position: relative;
 
+      // .active = active categories in single entry view (e.g. single project's markets)
+      // .current = current page (with arrow)
+      &.active,
       &.current {
         a {
           color: $red;
@@ -33,7 +68,7 @@
     a {
       display: block;
       text-decoration: none;
-      padding: 1*$beat 0;
+      padding: 1*$beat 2*$beat 1*$beat 0;
       &:hover,
       &:focus {
         color: $red;
@@ -43,7 +78,8 @@
 }
 
 // MS — not sure if this is being used anywhere...
-.current-filter-label, .open-filters {
+.current-filter-label,
+.open-filters {
   @include hardware-acceleration;
   top: 132px;
   z-index: 2;
